--- a/Templates/badmin.html
+++ b/Templates/badmin.html
@@ -77,7 +77,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('listar_usuarios') }}">Perfil</a>
+                            <a class="nav-link" href="{{ url_for('perfil') }}">Perfil</a>
                         </li>
                         
                     </ul>
