--- a/Templates/index.html
+++ b/Templates/index.html
@@ -77,9 +77,9 @@
         <div class="row">
             <div class="col-sm-4">
                 <div class="card shadow" style="width: 25rem; height: 600px;">
-                    <div style="border-radius: 80%;">
+                     <div class="text-center" style="border-radius: 100%;">
                         <img src="{{ url_for('static', filename='IA.png') }}" class="card-img-top" alt="..."
-                            style="border-radius: 100%;">
+                            style="border-radius: 200%;">
                     </div>
                     <div class="card-body">
                         <h5 class="card-title">Ventas</h5>
@@ -110,10 +110,10 @@
                 </div>
             </div>
             <div class="col-sm-4">
-                <div class="card shadow" style="width: 25rem;  height: 100%;">
-                    <div style="border-radius: 80%;">
-                        <img src="{{ url_for('static', filename='ventas.png') }}" class="card-img-top" alt="..."
-                            style="border-radius: 100%;">
+                <div class="card shadow" style="width: 25rem;  height: 600px;">
+                      <div class="text-center" style="border-radius: 1000%;">
+                        <img src="{{ url_for('static', filename='ventas.webp') }}" class="card-img-top" alt="..."
+                            style="border-radius: 50%;">
                     </div>
                     <div class="card-body">
                         <h5 class="card-title">Carrito</h5>
