--- a/Templates/login.html
+++ b/Templates/login.html
@@ -20,15 +20,15 @@
   {% endif %}
 {% endwith %}
 
-<div class="d-flex justify-content-center align-items-center vh-100" style="background-color: #d5eadc;">
+<div class="d-flex justify-content-center align-items-center vh-100" style="background-color: #a5ada8;">
 
     <div class="p-4 w-100" style="max-width: 1100px;">
-        <div class="rounded-5 shadow-lg p-4" style="background-color: #a0d8b3;">
+        <div class="rounded-5 shadow-lg p-4" style="background-color: #cecacaf1;">
 
             <div class="row g-0">
                 <!-- Columna Izquierda -->
                 <div class=" rounded-5 col-md-6 d-flex flex-column justify-content-center align-items-center text-white p-4"
-                    style="background-color: blue;">
+                    style="background-color: #a5ada8;">
                     <img src="{{ url_for('static', filename='usuario.png') }}" class="img-fluid mb-3"
                         style="max-width: 20%; height: auto; object-fit: contain;">
                     <h2 class="text-center">¡Bienvenido Nuevamente!</h2>
@@ -37,7 +37,7 @@
                     </p>
                     <a href="{{ url_for('registro') }}">
                         <button type="button" class="btn btn-success mt-2"
-                            style="background: linear-gradient(90deg, #0dc9bd, #02cf4a);">
+                          style="height: 45px; background: linear-gradient(90deg, #35bd3c,#16691a);">
                             Registrarse
                         </button>
                     </a>
@@ -72,7 +72,7 @@
                         </div>
 
                         <button type="submit" class="btn btn-primary w-100"
-                            style="height: 45px; background: linear-gradient(90deg, #21cfff,#6d29ff,#0b66b5,#cf4dff);">
+                            style="height: 45px; background: linear-gradient(90deg, #35bd3c,#16691a);">
                             Iniciar Sesión
                         </button>
                     </form>
