--- a/Templates/registro.html
+++ b/Templates/registro.html
@@ -3,15 +3,15 @@
 {% block titulo %} Registrarse {% endblock titulo %}
 
 {% block body %}
-<div class="d-flex justify-content-center align-items-center vh-100" style="background-color: #d5eadc;">
+<div class="d-flex justify-content-center align-items-center vh-100" style="background-color: #a5ada8;">
     <!-- Contenedor flotante externo -->
     <div class="p-4 w-100" style="max-width: 1100px;">
-        <div class="rounded-5 shadow-lg p-4" style="background-color: #a0d8b3;">
+        <div class="rounded-5 shadow-lg p-4" style="background-color: #cecacaf1;">
             <div class="row g-0">
 
                 <!-- Columna izquierda -->
                 <div class=" rounded-5 col-md-6 d-flex flex-column justify-content-center align-items-center text-white p-4"
-                    style="background-color: blue;">
+                    style="background-color: #a5ada8;">
                     <img src="{{ url_for('static', filename='usuario.png') }}" class="img-fluid mb-3"
                         style="max-width: 50%; height: 20%; object-fit: contain;">
                     <h2 class="text-center">¡Bienvenido!</h2>
@@ -60,7 +60,9 @@
                                 placeholder="Confirmar contraseña" aria-label="confirmar" required>
                         </div>
 
-                        <button type="submit" class="btn btn-primary w-100" style="height: 45px;">
+                        <button
+                        style="height: 45px; background: linear-gradient(90deg, #35bd3c,#16691a);" 
+                        type="submit" class="btn btn-primary w-100" style="height: 45px;">
                             Registrarse
                         </button>
                     </form>
